syntax = "proto3";

message CreateRoomMsg {

     string roomId=1;
     string code=2;
     string msg=3;
}