syntax = "proto3";

message EnterRoomMsg {

     string roomId=1;
     string code=2;
     string msg=3;
}